# qchat

./: .gitmodules  compile_commands.json  fixes.patch
server/: .gitignore  CMakeLists.txt  CMakePresets.json  docker-compose.yaml  env_vars.model.json  instructions.md
server/installers/: boost.cmake.json  brotli.cmake.json  crow.cmake.json  jsoncpp.cmake.json  libpq.meson.json  openssl.custom.json  sqlpp.cmake.json  zlib.cmake.json  zstd.cmake.json
server/patches/: brotli.patch  sqlpp23.patch
server/src/: CMakeLists.txt  example.cpp
server/src/lldb_test/: test_lldb.cpp
server/src/qchat_server/: main.cpp
server/src/server/: example.cpp  urls.cpp  urls.hpp
server/src/server/core/: application.cpp  application.hpp  settings.cpp  settings.hpp
server/src/server/entities/: users.hpp  users.pq.sql
server/src/server/views/: info.cpp  info.hpp
